@@ -597,11 +597,14 @@ extern void CommandAccept( char * ),
     CommandExportMatchPostScript( char * ),
     CommandExportMatchText( char * ),
     CommandExportMatchEquityEvolution ( char * ),
+    CommandExportMatchSGG( char * ),
+    CommandExportMatchTMG( char * ),
     CommandExportPositionEPS( char * ),
     CommandExportPositionPNG( char * ),
     CommandExportPositionHtml( char * ),
     CommandExportPositionText( char * ),
     CommandExportPositionGammOnLine ( char * ),
+    CommandExportPositionSnowieTxt( char * ),
     CommandExternal( char * ),
     CommandHelp( char * ),
     CommandHint( char * ),
