@@ -1,3 +1,12 @@
+Sun Mar 30 20:31:02 2003  Joern Thyssen  <jth@gnubg.org>
+
+	Add export of snowie .txt
+
+	* gnubg.c: new command "export position snowietxt ..."
+	* export.c (CommandExportPositionSnowieTxt, ExportSnowieTxt):
+	new functions.
+	* gtkgame.c: add menu entry for export of snowie .txt
+
 Sun Mar 30 18:26:10 2003  Joern Thyssen  <jth@gnubg.org>
 
 	Add bgvariation bgv to cubeinfo
